manifests/apps/memos/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      # 只调度到 HK 节点（拓扑 + 业务角色）
      nodeSelector:
        topology.kubernetes.io/region: APAC
        topology.kubernetes.io/zone: HK
        node.kubernetes.io/role-svc: "true"
      containers:
        - name: memos
          image: neosmemo/memos:stable
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: memos-data
              mountPath: /var/opt/memos
      volumes:
        - name: memos-data
          persistentVolumeClaim:
            claimName: memos-data
